# postrail

./: .defensive-patterns.json  .dockerignore  .env.example  .env.local.example  .env.test.example  .eslintignore  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .markdownlint.json  .qualityrc.json  .stylelintrc.json  ACCESSIBILITY_AUDIT.md  AGENTS.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURAL_REVIEW_INDEX.md  ARCHITECTURE_ACTION_ITEMS.md  ARCHITECTURE_EXCEPTIONS.md  ARCHITECTURE_REVIEW.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEPENDENCY_AUDIT.md  DEPENDENCY_DETAILS.md  DEPENDENCY_QUICK_REFERENCE.md  Dockerfile  ISSUE_FOUND.md  LICENSE  PERFORMANCE_ANALYSIS.md  PERFORMANCE_AUDIT.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_CHECKLIST.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_SUMMARY.md  README.md  REFACTORING_REPORT.md  (+33 more)
.github/: PERFORMANCE_CHECKLIST.md  PERFORMANCE_RUNBOOK.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit  pre-push  pre-push-smart
.scratchpads/: pr-31-investigation.md  pr-31-resolution-summary.md
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: ab-variants.tsx  ai-tone-settings.tsx  facebook-setup-guide.tsx  linkedin-setup-guide.tsx  logout-button.tsx  newsletter-editor.tsx  post-preview-card.tsx  post-scheduler.tsx  subscription-cards.tsx  timezone-settings.tsx  twitter-setup-guide.tsx
config/: constants.js
docs/: ADOPTION-SUMMARY.md  API.md  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  CI_OPTIMIZATION_BACKLOG_ITEM.md  DATABASE_ANALYSIS_2025-11-21.md  DATABASE_MIGRATION_performance_indexes.sql  DATABASE_MIGRATION_rbac.sql  DATABASE_MIGRATION_scheduled_time.sql  DATABASE_MIGRATION_twitter.sql  DATABASE_MIGRATION_unique_constraint.sql  DATABASE_SCHEMA.md  DEPLOYMENT.md  DOCUMENTATION_AUDIT_2025-11-21.md  DOCUMENTATION_QUICK_REFERENCE.md  E2E_TESTING_SETUP.md  GETTING_STARTED.md  OPEN-SOURCE-READINESS.md  OPERATIONAL_RUNBOOK.md  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_1_COMPLETE.md  PROPER_FIXES_2025-11-16.md  QUICK_DEPLOYMENT_GUIDE.md  QUICK_TEST_GUIDE.md  RBAC_ARCHITECTURE.md  RBAC_IMPLEMENTATION_SUMMARY.md  REAL_TESTS_SUMMARY.md  REQUIREMENTS.md  SECURITY-AUDIT.md  SECURITY_FIXES_QUALITY_AUTOMATION.md  SECURITY_REVIEW_FIXES.md  SECURITY_REVIEW_RESPONSE_2025-11-16.md  SETUP_SUPABASE.md  TESTING.md  TWITTER_SETUP.md  VBL-QUALITY-INTEGRATION-PROPOSAL.md  (+4 more)
(+217 files in other folders)
